# yelken

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.playground  LICENSE  README.md
app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  Dashboard.tsx  Icons.tsx  Nav.scss  Nav.tsx  api.ts  config.ts  context.ts  dashboard.tsx  index.scss  index.tsx  models.ts  nav.tsx  theme.ts  types.d.ts
app/src/admin/: Locale.tsx  Page.tsx  Role.tsx  Settings.tsx  Template.tsx  Theme.tsx  User.tsx
app/src/appearance/: Page.tsx  Template.tsx  Theme.tsx
app/src/cms/: Asset.scss  Asset.tsx  Content.tsx  Form.tsx  Model.tsx
app/src/components/: DeleteConfirmModal.tsx  Pagination.tsx  ProfileIcon.tsx  ProgressSpinner.tsx
app/src/content/: Asset.scss  Asset.tsx  Content.tsx  Model.tsx  content.tsx  model.tsx
app/src/i18n/: en.ts  en.tsx  tr.ts  tr.tsx
app/src/lib/: alert.ts  api.ts  config.ts  context.ts  i18n.ts  models.ts  utils.ts
bruno/: Submit Form.bru  bruno.json  collection.bru
bruno/admin/Locale/: Create Locale.bru  Delete Locale Resource.bru  Delete Locale.bru  Fetch Locale Resource.bru  folder.bru  (+3 more)
bruno/appearance/: folder.bru
bruno/cms/: folder.bru
bruno/common/: Fetch Locales.bru  Fetch Namespaces.bru  Fetch Options.bru  folder.bru
bruno/health/: folder.bru  live.bru  ready.bru
bruno/plugin/: Plugins.bru  folder.bru
bruno/user/: Profile.bru  folder.bru
examples/custom-theme/: README.md  docker-compose.yaml
examples/hello-world/: README.md  docker-compose.yaml
frontend/: client.ts  esbuild.mjs  package-lock.json  package.json  server.ts  tsconfig.json
frontend/src/: app.tsx  entry-client.tsx  entry-server.tsx
frontend/types/: root.d.ts
frontend/wit/: frontend.wit
playground/: .gitignore  firefox-no-module-fix.sh  index.html  package-lock.json  package.json  sw.js  tsconfig.json  vite.config.js  vite.config.ts
playground/playground/: index.html
playground/src/: config.ts  index.scss  index.tsx  main.ts
plugins/: Cargo.toml
plugins/editor/: Cargo.toml
themes/default/: .gitignore  Yelken.json  build.js  package-lock.json  package.json
wit/handler/: handler.wit
wit/management/: management.wit
wit/plugin/: plugin.wit
yelken/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
yelken/admin/: Cargo.toml
yelken/admin/src/: lib.rs  requests.rs  responses.rs
yelken/admin/src/handlers/: install.rs  locale.rs  mod.rs  options.rs  page.rs  permission.rs  role.rs  template.rs  theme.rs  user.rs
yelken/api/admin/: Cargo.toml
yelken/api/admin/src/: lib.rs  requests.rs  responses.rs
yelken/api/admin/src/handlers/: locale.rs  mod.rs  option.rs  role.rs  user.rs
yelken/api/appearance/: Cargo.toml
yelken/api/appearance/src/: lib.rs  render.rs  requests.rs  responses.rs
yelken/api/appearance/src/handlers/: mod.rs  page.rs  template.rs  theme.rs
yelken/api/auth/: Cargo.toml
yelken/api/auth/src/: lib.rs
yelken/api/auth/src/handlers/: email.rs  mod.rs  oauth.rs
yelken/api/cms/: Cargo.toml
yelken/api/cms/src/: lib.rs  requests.rs  responses.rs
yelken/api/cms/src/handlers/: asset.rs  content.rs  form.rs  mod.rs  model.rs  tag.rs
yelken/api/common/: Cargo.toml
yelken/api/common/src/: handlers.rs  lib.rs  responses.rs
yelken/api/user/: Cargo.toml
yelken/api/user/src/: lib.rs
yelken/app/: Cargo.toml
yelken/app-client/: Cargo.toml  index.html  index.scss  package-lock.json  package.json
yelken/app-client/src/: log.rs  main.rs  resources.rs
yelken/app-server/: Cargo.toml
yelken/app-server/src/: lib.rs  resources.rs
yelken/app/locales/en/: sidenav.json
yelken/app/locales/tr/: sidenav.json
yelken/app/src/: auth.rs  config.rs  content.rs  lib.rs  nav.rs  plugin.rs  user.rs
yelken/app/src/auth/: email.rs  mod.rs  oauth.rs
yelken/app/src/content/: content.rs  mod.rs  model.rs
yelken/auth/: Cargo.toml
yelken/auth/src/: handlers.rs  lib.rs  requests.rs
yelken/auth/src/handlers/: email.rs  mod.rs  oauth.rs
yelken/base/: Cargo.toml
yelken/base/src/: async_sqlite.rs  config.rs  crypto.rs  db.rs  lib.rs  middlewares.rs  models.rs  paginate.rs  responses.rs  runtime.rs  sanitize.rs  schema.rs  services.rs  test.rs  types.rs  utils.rs  validate.rs
yelken/base/src/middlewares/: auth.rs  permission.rs
yelken/content/: Cargo.toml
yelken/content/src/: handlers.rs  lib.rs  requests.rs  responses.rs
yelken/content/src/handlers/: asset.rs  content.rs  mod.rs  model.rs
yelken/derive/: Cargo.toml
yelken/derive/src/: lib.rs
yelken/form/: Cargo.toml
yelken/form/src/: lib.rs
yelken/management/: Cargo.toml
yelken/management/src/: lib.rs  resources.rs
yelken/migrations/2025-02-05-165324_plugins/: down.sql  up.sql
yelken/migrations/2025-02-05-173732_init/: down.sql  up.sql
yelken/migrations/2025-02-24-111540_data/: down.sql  up.sql
yelken/migrations/postgres/2025-02-05-173732_init/: down.sql  up.sql
yelken/migrations/postgres/2025-02-24-111540_data/: down.sql  up.sql
yelken/migrations/sqlite/2025-05-15-152314_init/: down.sql  up.sql
yelken/migrations/sqlite/2025-05-18-093635_data/: up.sql
yelken/plugin/: Cargo.toml
yelken/plugin/src/: bindings.rs  handlers.rs  host.rs  lib.rs
yelken/setup/: Cargo.toml
yelken/setup/src/: lib.rs
yelken/shared/: Cargo.toml
yelken/shared/src/: auth.rs  content.rs  lib.rs  permission.rs  plugin.rs
yelken/src/: admin.rs  config.rs  handlers.rs  health.rs  lib.rs  locale.rs  main.rs  render.rs
yelken/store/: Cargo.toml
yelken/store/src/: lib.rs
yelken/ui/: Cargo.toml
yelken/ui/locales/en/: main.json
yelken/ui/locales/tr/: main.json  sidenav.json
yelken/ui/src/: auth.rs  dashboard.rs  handlers.rs  l10n.rs  lib.rs  nav.rs  plugin.rs  render.rs  settings.rs  user.rs
yelken/user/: Cargo.toml
yelken/user/src/: handlers.rs  lib.rs  responses.rs
yelken/wasm/: Cargo.toml
yelken/wasm/src/: console_logger.rs  lib.rs
yelken/web/: Cargo.toml  esbuild.mjs  index.html  index.scss  package-lock.json  package.json
yelken/web/src/: lib.rs  main.rs  resources.rs
(+116 files in other folders)
