[workspace]
members = [
  "admin",
  "app",
  "auth",
  "base",
  "content",
  "form",
  "plugin",
  "ui",
  "user",
]

[package]
name = "yelken"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
axum = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
diesel = { version = "2.2.7", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
fluent = { version = "0.16.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
leptos = { version = "0.7.5", default-features = false }
leptos_i18n = { version = "0.5.9", default-features = false }
leptos_router = "0.7.5"
log = "0.4.25"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
opendal = "0.53.0"
serde = { version = "1.0.217", features = ["rc", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2" }
unic-langid = "0.9.5"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[dependencies]
admin = { path = "./admin", optional = true }
app = { path = "./app", optional = true }
auth = { path = "./auth", optional = true }
base.path = "./base"
content = { path = "./content", optional = true }
form = { path = "./form", optional = true }
plugin = { path = "./plugin", optional = true }
ui = { path = "./ui", optional = true }
user = { path = "./user", optional = true }

anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy = "0.15.7"
env_logger = "0.11.6"
log.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "fs"] }
unic-langid.workspace = true

opendal = { workspace = true, features = ["services-fs"] }

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev-wasm]
inherits = "dev"

[profile.release]
lto = true

[features]
default = ["admin", "app", "auth", "content", "ui", "user"]
admin = ["dep:admin"]
app = ["dep:app"]
auth = ["dep:auth", "auth?/email"]
content = ["dep:content"]
form = ["dep:form"]
plugin = ["dep:plugin", "ui?/plugin"]
ui = ["dep:ui"]
user = ["dep:user"]
