[workspace]
members = [
  "admin",
  "app",
  "auth",
  "base",
  "content",
  "form",
  "plugin",
  "setup",
  "ui",
  "user",
  "wasm",
]

[package]
name = "yelken"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
axum = { version = "0.8.4", default-features = false, features = ["json", "query"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
diesel = { version = "2.2.4", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["deadpool"] }
fluent = { version = "0.16.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
include_dir = "0.7.4"
log = "0.4.27"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
opendal = { version = "0.53.0", default-features = false, features = ["services-memory"] }
serde = { version = "1.0.217", features = ["rc", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.6.2" }
unic-langid = "0.9.5"
url = "2.5.4"

[dependencies]
admin = { path = "./admin", optional = true }
app = { path = "./app", optional = true }
auth = { path = "./auth", optional = true }
base.path = "./base"
content = { path = "./content", optional = true }
form = { path = "./form", optional = true }
plugin = { path = "./plugin", optional = true }
ui = { path = "./ui", optional = true }
user = { path = "./user", optional = true }
setup = { path = "./setup", optional = true, features = ["postgres"] }

anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy = "0.15.7"
env_logger = "0.11.6"
log.workspace = true
opendal.workspace = true
tokio = { workspace = true, optional = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
url.workspace = true

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[features]
default = [
  "admin", "app", "auth", "content", "setup", "ui", "user",
  "base/postgres",
  "axum/default", "opendal/services-fs", "dep:tokio"
]
admin = ["dep:admin"]
app = ["dep:app"]
auth = ["dep:auth", "auth?/email"]
content = ["dep:content"]
form = ["dep:form"]
plugin = ["dep:plugin", "ui?/plugin"]
setup = ["dep:setup"]
ui = ["dep:ui"]
user = ["dep:user"]

[patch.crates-io]
# Patched for getting 'sqlite-wasm-rs' update which is not released yet
diesel = { git = "https://github.com/diesel-rs/diesel.git", branch = "master" }
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", branch = "main" }
