[workspace]
members = [
  "api/admin",
  "api/appearance",
  "api/auth",
  "api/cms",
  "api/common",
  "api/user",
  "app",
  "base",
  "form",
  "plugin",
  "setup",
  "wasm",
]

[package]
name = "yelken"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
axum = { version = "0.8.4", default-features = false, features = ["json", "query"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
diesel = { version = "2.2.4", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["deadpool"] }
fluent = { version = "0.16.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
log = "0.4.27"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
opendal = { version = "0.53.0", default-features = false, features = ["services-memory"] }
serde = { version = "1.0.217", features = ["rc", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.6.2" }
unic-langid = "0.9.5"
url = "2.5.4"

[dependencies]
admin = { path = "api/admin", optional = true }
app = { path = "./app", optional = true }
appearance = { path = "api/appearance", optional = true }
auth = { path = "api/auth", optional = true }
base.path = "./base"
common.path = "api/common"
cms = { path = "api/cms", optional = true }
form = { path = "./form", optional = true }
plugin = { path = "./plugin", optional = true }
user = { path = "api/user", optional = true }
setup = { path = "./setup", optional = true, features = ["postgres"] }

anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy = "0.15.7"
env_logger = "0.11.6"
log.workspace = true
opendal.workspace = true
tokio = { workspace = true, optional = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[features]
default = [
  "admin", "app", "appearance", "auth", "cms", "setup", "user",
  "base/postgres",
  "axum/default", "opendal/services-fs", "dep:tokio"
]
admin = ["dep:admin"]
app = ["dep:app"]
appearance = ["dep:appearance"]
auth = ["dep:auth", "auth?/email"]
cms = ["dep:cms"]
form = ["dep:form"]
plugin = ["dep:plugin", "appearance?/plugin"]
setup = ["dep:setup"]
user = ["dep:user"]

# Patched for getting 'sqlite-wasm-rs' update and other sqlite improvements which are not released yet
[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
