[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../base"
shared = { path = "../shared", features = ["permission"] }
ui.path = "../ui"

anyhow.workspace = true
axum = { workspace = true, features = ["multipart", "macros"] }
bytes = "1.10.1"
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fluent.workspace = true
log.workspace = true
rand.workspace = true
opendal.workspace = true
serde.workspace = true
tokio.workspace = true
unic-langid.workspace = true
zip = { version = "2.5.0", default-features = false, features = ["deflate"] }
serde_json = "1.0.140"
