[package]
name = "app_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["user"] }
app = { path = "../app", features = ["web"] }

console_error_panic_hook = "0.1.7"
leptos_i18n.workspace = true
leptos.workspace = true
log.workspace = true
reqwest.workspace = true
send_wrapper = "0.6.0"
serde.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Location", "Storage", "Window"] }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
csr = ["leptos/csr", "leptos_i18n/hydrate"]
plugin = []
