[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["auth", "content", "plugin", "user"] }

leptos.workspace = true
leptos_i18n = { workspace = true, features = ["json_files"] }
leptos_router.workspace = true
log.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Crypto", "Document", "HtmlDocument", "Storage", "Window"], optional = true }

js-sys = { version = "0.3.77", optional = true }

[features]
web = ["dep:js-sys", "dep:reqwest", "dep:wasm-bindgen", "dep:web-sys"]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "tr"]
namespaces = ["sidenav"]
