[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["permission"] }

anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
log.workspace = true
opendal.workspace = true
serde.workspace = true
tower.workspace = true

base64 = "0.22.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
ring = "0.17.8"
