[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures.workspace = true
log.workspace = true
opendal.workspace = true
serde.workspace = true
tower.workspace = true
unic-langid.workspace = true
url.workspace = true

base64 = "0.22.1"
futures-util = { version = "0.3.31", default-features = false }
jsonwebtoken = { version = "9.3.1", default-features = false }
mime_guess = "2.0.5"
ring = "0.17.8"
send_wrapper = { version = "0.6.0", features = ["futures"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }

[features]
postgres = ["diesel/postgres", "diesel-async/postgres"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel-async/sqlite"]
