[package]
name = "management"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../base"
content.path = "../content"
plugin.path = "../plugin"
shared = { path = "../shared", features = ["user"] }
ui.path = "../ui"

anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_i18n = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
log.workspace = true
serde.workspace = true
tokio.workspace = true
any_spawner = { version = "0.2.0", features = ["tokio"] }

hydration_context = "0.2.1"
