[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }

anyhow.workspace = true
diesel.workspace = true
diesel-async.workspace = true
log.workspace = true
wasmtime = { version = "29.0.1", features = ["async"] }
wasmtime-wasi = { version = "29.0.1", default-features = false }
