[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[dependencies]
base.path = "../base"

axum.workspace = true
diesel.workspace = true

diesel_migrations = { version = "2.2.0", git = "https://github.com/bwqr/diesel.git", branch = "master", default-features = false }

[features]
postgres = ["diesel_migrations/postgres"]
sqlite = ["diesel_migrations/sqlite"]
