[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[dependencies]
base.path = "../base"
store.path = "../store"

axum.workspace = true
diesel.workspace = true
diesel-async = { workspace = true, features = ["migrations"] }
opendal.workspace = true
rand.workspace = true
serde.workspace = true

diesel_migrations = { version = "2.2.0", default-features = false }

[features]
postgres = ["diesel_migrations/postgres"]
sqlite = ["diesel_migrations/sqlite"]
