[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
base.path = "../base"

diesel.workspace = true
diesel-async.workspace = true
log.workspace = true
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true

rc-zip-sync = { version = "4.3.2", default-features = false, features = ["deflate"] }
