[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../base"
plugin = { path = "../plugin", optional = true }

anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
log.workspace = true
tokio.workspace = true

arc-swap = "1.7.1"
fluent = { version = "0.16.1", default-features = false }
matchit = "0.8.4"
tera = { version = "1.20.0", default-features = false }
unic-langid.workspace = true

[features]
plugin = ["dep:plugin"]
