[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../base"
plugin = { path = "../plugin", optional = true }

anyhow.workspace = true
arc-swap.workspace=true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fluent.workspace = true
log.workspace = true
opendal.workspace = true
serde.workspace = true
unic-langid.workspace = true

matchit = "0.8.4"
minijinja = { version = "2.9.0", default-features = false, features = ["builtins", "debug", "loader", "loop_controls", "macros", "multi_template", "serde"] }

[features]
plugin = ["dep:plugin"]
