[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base", default-features = false }
setup = { path = "../setup", features = ["sqlite"] }
yelken = { path = "../", default-features = false }

axum.workspace = true
chrono = { workspace = true, features = ["wasmbind"] }
diesel.workspace = true
diesel-async.workspace = true
include_dir.workspace = true
log.workspace = true
futures.workspace = true
opendal.workspace = true
rand.workspace = true
tower.workspace = true

console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.3", features = ["wasm_js"] }
sqlite-wasm-rs = { version = "0.3.4", default-features = false, features = ["precompiled"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Headers", "Response", "ResponseInit"] }

[features]
default = [
  "yelken/admin", "yelken/app", "yelken/auth", "yelken/content", "yelken/ui", "yelken/user",
  "base/sqlite",
]
