[package]
name = "appearance"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../../base"
derive.path = "../../derive"
plugin = { path = "../../plugin", optional = true }
store.path = "../../store"

anyhow.workspace = true
arc-swap.workspace=true
axum = { workspace = true, features = ["multipart"] }
diesel.workspace = true
diesel-async.workspace = true
fluent.workspace = true
log.workspace = true
opendal.workspace = true
rand.workspace = true
serde.workspace = true
unic-langid.workspace = true
url.workspace = true

matchit = "0.8.4"
minijinja = { version = "2.9.0", default-features = false, features = ["builtins", "debug", "loader", "loop_controls", "macros", "multi_template", "serde"] }
serde_urlencoded = "0.7.1"

[dev-dependencies]
base = { path = "../../base", features = ["postgres"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
plugin = ["dep:plugin"]
