[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]
base.path = "../../base"
derive.path = "../../derive"

anyhow.workspace = true
axum = { workspace = true, features = ["form", "multipart"] }
diesel.workspace = true
diesel-async.workspace = true
futures.workspace = true
log.workspace = true
rand.workspace = true
opendal.workspace = true
serde.workspace = true
tower.workspace = true
url.workspace = true
